thelounge/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: thelounge
  name: thelounge
spec:
  rules:
    - host: irc.cajun.pro
      http:
        paths:
          - path: /
            backend:
              serviceName: thelounge
              servicePort: 9000

  tls:
    - hosts: [irc.cajun.pro]
      secretName: irc-cajun-pro
